finalization search changes

--- a/resources/finalization/view/finalization.html
+++ b/resources/finalization/view/finalization.html
@@ -8,7 +8,7 @@
     <div class="leftContainer">
         <div class="contentPart pt-3 pb-3">
             <div class="">
-                <finalization-list-view finalization-records="finalizationRecords" redirect-to="reimbursement-processing" finalize-selected-claims="finalizeSelectedClaims()" selected-claims="claimsToFinalize" rerender-view="rerenderView"></finalization-list-view>
+                <finalization-list-view finalization-records="finalizationRecords" redirect-to="reimbursement-processing" finalize-selected-claims="finalizeSelectedClaims()" selected-claims="claimsToFinalize" rerender-view="rerenderView" search-by="searchBy"></finalization-list-view>
             </div>
         </div>
     </div>
