--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -2,94 +2,11 @@
     <span class="navbar-brand p-0 m-0">User Assignment</span>
 </nav>
 <toaster-container></toaster-container>
+<div>
+    <my-search-box  search-info="fieldsObject" search-auto="userNamesObject" drop-down="dropDownValue" search-text="searchValue" callback="filterValues(data)"></my-search-box>
+</div>
 <section>
     <div class="leftContainer leftuser">
-        <div class="searchBar">
-            <div class="searchBarRow">
-                <div layout-gt-sm="row">
-                    <div style="width: 100% !important;">
-                        <md-input-container flex-gt-sm>
-                            <label style="white-space: pre-line;">Member Number</label>
-                            <input ng-model="memberNumber" />
-                        </md-input-container>
-                    </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
-                        <md-input-container flex-gt-sm>
-                            <label style="white-space: pre-line;">Voucher Number</label>
-                            <input ng-model="voucherNumber">
-                        </md-input-container>
-                    </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
-                        <md-input-container flex-gt-sm>
-                            <label style="white-space: pre-line;">Claim Number</label>
-                            <input ng-model="climeNo">
-                        </md-input-container>
-                    </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important; position: relative;">
-                        <md-icon style="margin-top: 36px; padding-left:5px;">
-                                <i class="oi align-middle" data-glyph="magnifying-glass"></i>
-                        </md-icon>
-                        <md-autocomplete flex-gt-sm style="width:80%; top: 0; left: 7px; bottom: 0; right: 0; position: absolute; margin-left: 15px; float: left;"
-                            md-input-name = "Approved By"
-                            md-selected-item="approvedBy" 
-                            md-search-text="approvedSearchText"
-                            md-items="item in querySearch(approvedSearchText)" 
-                            md-item-text="item.name" 
-                            md-floating-label="Approved By"
-                            md-clear-button="true">
-                            <md-item-template>
-                                <span md-highlight-text="approvedSearchText">{{item.name}}</span>
-                            </md-item-template>
-                            <md-not-found>
-                                No Result Found                                
-                            </md-not-found>
-                            
-                        </md-autocomplete>
-                    </div>                    
-                    <div style="border-left: 1px solid #e6e6e6; width: 194% !important;">
-                        <md-input-container>
-                            <label style="white-space: pre-line;">Request Received From</label>
-                            <md-datepicker ng-keyup="clearDatepickerKeyupValue($event);" ng-model="requestedFromDate" md-hide-icons="triangle" md-open-on-focus></md-datepicker>
-                        </md-input-container>
-                    </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: 190% !important;">
-                        <md-input-container>
-                            <label style="white-space: pre-line;">Request Received To</label>
-                            <md-datepicker ng-keyup="clearDatepickerKeyupValue($event);" ng-model="requestedToDate" md-hide-icons="triangle" md-open-on-focus></md-datepicker>
-                        </md-input-container>
-                    </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important; position: relative;">
-                      <md-icon style="margin-top: 36px; padding-left:5px;">
-                          <i class="oi align-middle" data-glyph="magnifying-glass"></i>
-                     </md-icon>
-                        <md-autocomplete flex-gt-sm style="width:80%; top: 0; left: 7px; bottom: 0; right: 0; position: absolute; margin-left: 15px; float: left;"
-                            md-input-name = "Assigned User"
-                            md-selected-item="assignedUser" 
-                            md-search-text="assignedSearchText"
-                            md-items="item in querySearch(assignedSearchText)" 
-                            md-item-text="item.name" 
-                            md-floating-label="Assigned User"
-                            md-clear-button="true">
-                            <md-item-template>
-                                <span md-highlight-text="assignedSearchText">{{item.name}}</span>
-                            </md-item-template>
-                            <md-not-found>
-                                No Result Found                                    
-                            </md-not-found>
-                        </md-autocomplete>
-                    </div>
-                    <div class="searchColm align-middle text-center" ng-click="search();" style="width: 50% !important ;padding-top:10px;">
-                        <a href="javascript:;" data-toggle="modal" data-target="#newRegClaims" class="searBtn mt-1 ml-3 mr-3 align-middle">
-                            <span class="oi align-middle" data-glyph="magnifying-glass"></span>
-                        </a>
-                        <a ng-click="clear()" href="javascript:;" class="searBtn mt-1 ml-3 mr-3 align-middle">
-                                <span class="oi align-middle" data-glyph="x"></span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
         <div class="contentPart pb-3">
             <h2 class="title">Total {{claimList.length}} available</h2>
             <div class="container-fluid" style="padding-left:0px;">
