--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -138,9 +138,8 @@
                                         <td>{{claim.voucherNumber}}</td>
                                         <td>{{claim.policyNumber}}</td>
                                         <td>{{claim.ibanNum}}</td>
-                                        <td class="text-center" >
-                                            <!-- <a style="float:left"class="oi" data-glyph="paperclip" href="resources/img/dis.png" download></a> -->
-                                            <a style="float:left" class="fa fa-file-pdf-o" style="font-size:68px" href="resources/img/dis.png" download></a>
+                                        <td class="text-center">
+                                            <a class="float-left fa fa-file-pdf-o" href="resources/img/dis.png" download></a>
                                        </td>
                                     </tr>
                                 </tbody> 
