--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -3,7 +3,7 @@
 </nav>
 <toaster-container></toaster-container>
 <div>
-    <my-search-box  search-info="fieldsObject" search-auto="userNamesObject" drop-down="dropDownValue" search-text="searchValue" callback="filterValues(data)"></my-search-box>
+    <my-search-box search-info="fieldsObject" search-auto="userNamesObject" drop-down="dropDownValue" search-text="searchValue" callback="filterValues(data)"></my-search-box>
 </div>
 <section>
     <div class="leftContainer leftuser">
@@ -13,7 +13,7 @@
                 <div class="row">
                     <div class="col-9">
                         <div class="tabOuter">
-                            <claims-list-view tabs-to-display="tabsToDisplay" all-claim-records="claimList" selected-claims="claimsToAssign" navigate-to="{{selectedClaim == 'eclaims' ? 'eclaim' : 'reimbursement-processing'}}" rerender-view="rerenderView"></claims-list-view>
+                            <claims-list-view tabs-to-display="tabsToDisplay" all-claim-records="claimList" selected-claims="claimsToAssign" navigate-to="{{selectedClaim == 'eclaims' ? 'eclaim' : 'reimbursement-processing'}}" rerender-view="rerenderView" search-by="searchBy"></claims-list-view>
                         </div>
                     </div>
                     <div class="col-3 innerRight">
