--- a/css/directiveCss.css
+++ b/css/directiveCss.css
@@ -1,6 +1,6 @@
 *, *:before, *:after {
     -webkit-box-model: border-box;
-    font-family: arial;
+    /* font-family: arial; */
 }
 
 .dropdown {
