--- a/resources/eclaim/view/eclaim-processing.html
+++ b/resources/eclaim/view/eclaim-processing.html
@@ -227,8 +227,8 @@
                 </div>                
             </div>
             <div class="rightContentPart float-right pr-0 pb-3">
-                <a href="javascript:;" class="infoToggleBtn" ng-class="{'infoToggleBtnToggled' : infoToggle}" ng-style="{'margin-left' : !infoToggle ? '12px' : '0px'}" ng-click="infoToggle = !infoToggle"><span class="oi" data-glyph="arrow-right"></span> <br />info</a>
-                <div class="row col-sm-12">
+                <a href="javascript:;" class="infoToggleBtn" ng-class="{'infoToggleBtnToggled' : infoToggle}" ng-style="{'margin-left' : !infoToggle ? '12px' : '37px'}" ng-click="infoToggle = !infoToggle"><span class="oi" data-glyph="arrow-right"></span> <br />info</a>
+                <!-- <div class="row col-sm-12">
                     <div class="col-sm-2 medicalCardInfoBox medicalCardInfoBoxShow" id="medicalCardInfoBox" style="height: auto !important;">
                         <h3>Medical card info</h3>
                         <ul>
@@ -297,28 +297,106 @@
                             </carousel-next>
                         </ui-carousel>
                     </div>
-                    <!-- <div class="col-sm-3 requestListWrap clearfix">
-                        <div class="requstListSlidePart">
-                            <div class="requstList">
-                                <ui-carousel slides="claimReqList" class="eclaim" style="width:{{getWidth()}};" slides-to-show="noOfSlides" slides-to-scroll="1" initial-slide="0" infinite="false">
-                                    <carousel-item  class="eclaim-item">
-                                        <li ng-click="toggleJson(item);" style="cursor:pointer">
-                                            <p><b>Claim Number:</b> <span>#{{item.claimNum}}</span></p>
-                                            <span><b>Request Number:</b> <a class="currencyTypeCustom" href="javascript:void(0);" ng-click="toggleJson(item);">#{{item.reqNum}}</a> &nbsp;</span><strong ng-class="{'text-success' : item.status == 'Approved', 'text-danger' : item.status == 'Rejected'}">{{item.status}}</strong>
-                                            <p><b>Claim Status Reason:</b> {{item.statusReason}}</p>
-                                            <p><b>Rejected Reason:</b> {{item.rejectedReason}}</p>
+                </div> -->
+                <div class="row col-sm-12">
+                    <div class="infoList clearfix  col-sm-8">
+                        <div class="row">
+                            <li>
+                                <span>Claim Number</span>
+                                <strong>{{claim.claimNum}}</strong>
+                            </li>
+                            <li>
+                                <span>Request Number</span>
+                                <strong>{{claim.reqNum}}</strong>
+                            </li>
+                            <li>
+                                <span>Status</span>
+                                <strong ng-class="{'text-success' : claim.status == 'Approved', 'text-danger' : claim.status == 'Rejected'}">{{claim.status}}</strong>
+                            </li>
+                            <li>
+                                <span>Policy Number</span>
+                                <strong>{{claim.policyNum}}</strong>
+                            </li>
+                            <li>
+                                <span>Member Number</span>
+                                <strong>{{claim.memberNum}}</strong>
+                            </li>
+                        </div>
+                        <div class="row reimbursement-carousel">
+                            <ui-carousel slides="claimReqList" class="" slides-to-show="1" slides-to-scroll="1" initial-slide="0" style="width:100%;margin:0px">
+                                <carousel-item  class="eclaim-item">
+                                    <ul>
+                                        <li style="cursor:pointer; width:25%">
+                                            <span>
+                                                <b>Request Number:</b><span class="currencyTypeCustom" ng-click="toggleJson(item);">#{{item.reqNum}}</span> 
+                                            </span>
                                         </li>
-                                    </carousel-item>                
-                                    <carousel-prev>
-                                        <a href="javascript:;" class="requstListLeftArrow"><span class="oi" data-glyph="chevron-left"></span></a>
-                                    </carousel-prev>
-                                    <carousel-next>
-                                        <a href="javascript:;" class="requstListRightArrow"><span class="oi" data-glyph="chevron-right"></span></a>
-                                    </carousel-next>
-                                </ui-carousel>
-                            </div>                        
-                        </div>                    
-                    </div> -->
+                                        <li style="width:20%">
+                                            <span><b>Claim Status:</b> <span ng-class="{'text-success' : item.status == 'Approved', 'text-danger' : item.status == 'Rejected'}">{{item.status}}</span></span>
+                                        </li>    
+                                        <li style="width:32%;" class="text-elipsis">
+                                            <span><b>Claim Status Reason:</b> <span style="color:#4e5e82">{{item.statusReason}}</span></span>
+                                        </li>
+                                        <!-- <li style="width:20%; text-align:right;">
+                                            <span ng-show="item.status == 'Approved'"><b>Approved Amount:</b> <span style="color:#4e5e82;">{{item.approvedAmount}}</span></span>
+                                            <span ng-show="item.status == 'Rejected'"><b>Rejected Amount:</b> <span style="color:#4e5e82;">{{item.rejectedAmount}}</span></span>
+                                        </li> -->
+                                    </ul>
+                                </carousel-item>                
+                                <carousel-prev>
+                                    <a href="javascript:;" class="requstListLeftArrow"><span class="oi" data-glyph="chevron-left"></span></a>
+                                </carousel-prev>
+                                <carousel-next>
+                                    <a href="javascript:;" class="requstListRightArrow"><span class="oi" data-glyph="chevron-right"></span></a>
+                                </carousel-next>
+                            </ui-carousel>
+                        </div>
+                    </div>                    
+                    <div class="medicalCardInfoBox medicalCardInfoBoxShow" id="medicalCardInfoBox">
+                        <h3>Medical card info</h3>
+                        <li style="list-style: none;">
+                            <span style="width: auto !important;padding-left: 6px;"> Insured Name:</span>
+                            <span>High Treatment Service - Medic Policy</span>
+                        </li> 
+                        <ul>
+                            <li>
+                                <span>Age:</span>
+                                <span>20</span>
+                            </li>  
+                            <li>
+                                <span>Gender:</span>
+                                <span>Female</span>
+                            </li>  
+                            <li>
+                                <span>Marital Status:</span>
+                                <span>Single</span>
+                            </li>
+                            <li>
+                                <span>Member N/W:</span>
+                                <span>AEM</span>
+                            </li> 
+                            <li>
+                                <span>Inpatient: </span>
+                                <span>Nil</span>
+                            </li>   
+                            <li>
+                                <span>Pharmacy:</span>
+                                <span>10%</span>
+                            </li>
+                            <li>
+                                <span>Consultation:</span>
+                                <span>50 AED</span>
+                            </li>
+                            <li>
+                                <span>Dental:</span>
+                                <span>10%</span>    
+                            </li>
+                            <li>
+                                <span>Lab:</span>
+                                <span>10%</span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <grid-wrapper ui-Grid-Options="gridOptions" inline-Edit="isInlineEdit" module="moduleName" on-Grid-Action="gridAction(info)"></grid-wrapper>
             </div>
@@ -328,6 +406,10 @@
             <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3 mt-3" ng-click="approveClaim()">Submit for Approval</button>
             <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3  mt-3" ng-click="rejectClaim()">Reject</button>
             <ul class="float-right clearfix mt-1">
+                <li class="float-left">
+                    <span>Base Currency</span>
+                    <strong>AED</strong>
+                </li>
                 <li class="float-left">
                     <span>Total deduction</span>
                     <strong>{{totalDeductionAmount | number}}</strong>
