--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -2,103 +2,18 @@
     <span class="navbar-brand p-0 m-0" ui-sref="claim-registration">Claims Registration</span>
 </nav>
 <toaster-container></toaster-container>
+<div class="row">
+    <div class="col-11">
+        <my-search-box search-info="fieldsObject" search-auto="registeredClaims"  search-text="searchValue" callback="filterValues(data)"></my-search-box>
+    </div>
+    <div class="col-1">
+            <div class="col-0 p-0" >
+                    <a href="javascript:;" class="btn btn-primary createNewBtn float-right mt-3 ml-4" ui-sref="claim-registration-new">Register</a>
+            </div>
+     </div>
+</div>
 <section>
     <div class="leftContainer leftreg">
-        <div class="contentPart">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-11 p-0">
-                        <div class="searchBarRow reimbListTabl" style="display: block">
-                            <div layout-gt-sm="row">
-                                <div style="border-left: 1px solid #e6e6e6;width: 90% !important;position: relative;"> 
-                                    <md-icon style="margin-top: 36px; padding-left:5px;">
-                                        <i class="oi align-middle" data-glyph="magnifying-glass"></i>
-                                    </md-icon>
-                                    <md-autocomplete flex-gt-sm style="width:80%; top: 0; left: 7px; bottom: 0; right: 0; position: absolute; margin-left: 15px; float: left;"
-                                        md-input-name = "Member Number"
-                                        md-selected-item="searchMemNum"
-                                        md-search-text="memNosearchText"
-                                        md-items="item in querySearch(memNosearchText, 'memberNumber')"
-                                        md-item-text="item.memberNumber"                                    
-                                        md-floating-label=" Card Number"
-                                        md-clear-button="true">
-                                        <md-item-template>
-                                            <span md-highlight-text="memNosearchText">{{item.memberNumber}}</span>
-                                        </md-item-template>
-                                        <md-not-found>
-                                                No Result Found                                
-                                        </md-not-found>
-                                    </md-autocomplete>
-                                </div>
-                                <div style="border-left: 1px solid #e6e6e6;width: 90% !important;position: relative;">
-                                     <md-icon style="margin-top: 36px; padding-left:5px;">
-                                        <i class="oi align-middle" data-glyph="magnifying-glass"></i>
-                                     </md-icon>
-                                    <md-autocomplete flex-gt-sm style="width:80%; top: 0; left: 7px; bottom: 0; right: 0; position: absolute; margin-left: 15px; float: left;"
-                                        md-input-name = "Member Name"
-                                        md-selected-item="searchMemName"
-                                        md-search-text="memNamesearchText"
-                                        md-items="item in querySearch(memNamesearchText, 'memberName')"
-                                        md-item-text="item.memberName"                                    
-                                        md-floating-label="Member Name"
-                                        md-clear-button="true">
-                                        <md-item-template>
-                                            <span md-highlight-text="memNamesearchText">{{item.memberName}}</span>
-                                        </md-item-template>
-                                        <md-not-found>
-                                                No Result Found                                
-                                        </md-not-found>
-                                    </md-autocomplete>   
-                                </div>
-                                <div style="border-left: 1px solid #e6e6e6;width: 90% !important;">
-                                    <md-input-container flex-gt-sm>
-                                        <label>Emirates Id</label>
-                                        <input ng-model="emiratesId">
-                                    </md-input-container>
-                                </div>
-                                <div style="border-left: 1px solid #e6e6e6;width: 90% !important;">
-                                    <md-input-container flex-gt-sm>
-                                        <label>Voucher Number</label>
-                                        <input ng-model="voucherNumber">
-                                    </md-input-container>
-                                </div>
-                                <div style="border-left: 1px solid #e6e6e6;width: 90% !important;position: relative;">
-                                    <md-icon style="margin-top: 36px; padding-left:5px;">
-                                       <i class="oi align-middle" data-glyph="magnifying-glass"></i>
-                                     </md-icon>
-                                    <md-autocomplete flex-gt-sm style="width:80%; top: 0; left: 7px; bottom: 0; right: 0; position: absolute; margin-left: 15px; float: left;"
-                                        md-selected-item="searchPolicy"
-                                        md-search-text="searchText"
-                                        md-items="item in querySearch(searchText, 'policyNumber')"
-                                        md-item-text="item.policyNumber"       
-                                        md-floating-label="Policy Number"
-                                        md-clear-button="true">
-                                        <md-item-template>
-                                            <span md-highlight-text="searchText">{{item.policyNumber}}</span>
-                                        </md-item-template>
-                                        <md-not-found>
-                                                No Result Found                                
-                                        </md-not-found>
-                                    </md-autocomplete>
-                                    
-                                </div>
-                                <div class="searchColm align-middle text-center" style="width: 90% !important">
-                                        <a ng-click="searchBtn()" href="javascript:;" class="searBtn searBtnWithText mt-3 ml-3 mr-3 align-middle">
-                                            <span class="oi align-middle" data-glyph="magnifying-glass"></span> Search
-                                        </a>
-                                        <a ng-click="clear()" href="javascript:;" class="searBtn searBtnWithText mt-3 ml-3 mr-3 align-middle">
-                                                Clear
-                                        </a>
-                                  </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-1 p-0">
-                        <a href="javascript:;" class="btn btn-primary createNewBtn float-right mt-3 ml-4" ui-sref="claim-registration-new">Register</a>
-                    </div>
-                </div>
-            </div>
-        </div>
          <div class="clearfix"></div>
         <div class="contentPart pt-3 pb-3">
             <div class="container-fluid regfont">
