search layout changes

--- a/resources/finalization/view/finalization.html
+++ b/resources/finalization/view/finalization.html
@@ -5,7 +5,7 @@
      <my-search-box search-info="fieldsObject" drop-down="dropDownValue" search-text="searchValue" callback="filterValues(data)"></my-search-box>
 </div>
 <section>
-    <div class="leftContainer">
+    <div class="leftContainer pl-20-pr-20">
         <div class="contentPart pt-3 pb-3">
             <div class="">
                 <finalization-list-view finalization-records="finalizationRecords" redirect-to="reimbursement-processing" finalize-selected-claims="finalizeSelectedClaims()" selected-claims="claimsToFinalize" rerender-view="rerenderView" search-by="searchBy"></finalization-list-view>
