--- a/css/style.css
+++ b/css/style.css
@@ -70,14 +70,11 @@ section {
     left: -5px;
     right: 15px;
     bottom: 20px;
-}
+} 
 
-.leftContainerSample {
-    /* position: absolute; */
-    top: 95px;
-    left: -5px;
-    right: 15px;
-    bottom: 20px;
+.leftContainer-search {
+    padding-left: 15px;
+    padding-top: 15px;
 }
 
 .withRightContainer .leftContainer {
@@ -1712,6 +1709,8 @@ footer {
 }
 .regfont{
     font-size:14px;
+    padding-right: 12px; 
+    padding-left: 12px;
 }
 .leftreg {
     position: absolute;
@@ -1855,4 +1854,9 @@ a {
 
 .outline-none {
     outline: none !important;
+}
+
+.pl-20-pr-20 {
+    padding-left:20px;
+    padding-right:20px;
 }
