--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -7,9 +7,9 @@
         <my-search-box search-info="fieldsObject" search-auto="registeredClaims"  search-text="searchValue" callback="filterValues(data)"></my-search-box>
     </div>
     <div class="col-1">
-            <div class="col-0 p-0" >
-                    <a href="javascript:;" class="btn btn-primary createNewBtn float-right mt-3 ml-4" ui-sref="claim-registration-new">Register</a>
-            </div>
+        <div class="col-0 p-0">
+            <a href="javascript:void(0);" class="btn btn-primary createNewBtn float-right mt-3 ml-4" ui-sref="claim-registration-new">Register</a>
+        </div>
      </div>
 </div>
 <section>
@@ -21,7 +21,7 @@
                     <div class="col-12 p-0">
                         <div class="reimbListTabl" id="reimbListTabl">
                             <h3 class="innerHeadText mt-2 mb-2 ml-2 d-inline-block">Registered Request</h3>
-                            <list-view-component headers="registrationHeaders" requests="registeredClaims" redirectto="claim-registration-edit"></list-view-component>
+                            <list-view headers="registrationHeaders" records="registeredClaims" redirect-to="claim-registration-edit" search-by="searchBy"></list-view>
                         </div>
                     </div>
                 </div>
