--- a/resources/registration/view/registration-general.html
+++ b/resources/registration/view/registration-general.html
@@ -265,7 +265,7 @@
         </div>
 
     </div>
-    <div class="rightContainer uploadList col-sm-5" ng-if="showUpload" style="height: 95vh;">
+    <div class="rightContainer col-sm-5" ng-if="showUpload" style="height: 95vh;">
         <a href="javascript:;" class="infoToggleBtn" ng-click="toggleInfo();" style="margin-left:17px;position: absolute;top:0"><span class="oi" data-glyph="arrow-right"></span> <br />hide</a>
         <ui-carousel slides="documents" slides-to-show="1" slides-to-scroll="1" initial-slide="previewIndex" style="width:98%;height:100%; margin:39px 0px 0px 18px;"
             infinite="false" name="'previewSlider'" ng-if = "documents.length > 0 && isPreview">
