--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -115,19 +115,18 @@
                                         <th ng-click="sortBy('memberName')">Member Name
                                             <span class="fa fa-sort" ng-show="propertyName == 'memberName'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc': !reverse}"></span>
                                         </th>
-                                        <th ng-click="sortBy('policyNumber')">Emirates Id
-                                            <span class="fa fa-sort" ng-show="propertyName == 'policyNumber'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc': !reverse}"></span>
+                                        <th ng-click="sortBy('emiratesId')">Emirates Id
+                                            <span class="fa fa-sort" ng-show="propertyName == 'emiratesId'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc': !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('voucherNumber')">Voucher Number
                                             <span class="fa fa-sort" ng-show="propertyName == 'voucherNumber'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc' : !reverse}"></span>
                                         </th>
-                                        <th ng-click="sortBy('emiratesId')">Policy Number
-                                            <span class="fa fa-sort" ng-show="propertyName == 'voucherNumber'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc' : !reverse}"></span>
+                                        <th ng-click="sortBy('policyNumber')">Policy Number
+                                            <span class="fa fa-sort" ng-show="propertyName == 'policyNumber'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc' : !reverse}"></span>
                                         </th>
-                                        <th ng-click="sortBy('ibanNum')">IBAN Number
-                                            <span class="fa fa-sort" ng-show="propertyName == 'ibanNum'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc' : !reverse}"></span>
+                                        <th ng-click="sortBy('mobileNum1')">Mobile Number
+                                            <span class="fa fa-sort" ng-show="propertyName == 'mobileNum1'"ng-class="{'fa fa-sort-desc': reverse, 'fa fa-sort-asc' : !reverse}"></span>
                                         </th>
-                                        <th>IBAN Document</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -137,10 +136,7 @@
                                         <td>{{claim.emiratesId}}</td>
                                         <td>{{claim.voucherNumber}}</td>
                                         <td>{{claim.policyNumber}}</td>
-                                        <td>{{claim.ibanNum}}</td>
-                                        <td class="text-center">
-                                            <a class="float-left fa fa-file-pdf-o" href="resources/img/dis.png" download></a>
-                                       </td>
+                                        <td>{{claim.mobileNum1}}</td>
                                     </tr>
                                 </tbody> 
                             </table>
