--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -517,6 +517,24 @@
                                 </md-input-container>
                             </span> 
                         </div>
+                        <span class="fa fa-info-circle" style="color: #4e5e82;">
+                                <md-tooltip md-direction="{{demo.tipDirection}}">
+                                    <table>
+                                        <tr>
+                                            <td><strong>United Arab Emirates(AED):</strong></td>
+                                            <td>&nbsp; 1</td>
+                                        </tr>
+                                        <tr>
+                                            <td><strong>United States Dollar(USD):</strong></td>
+                                            <td>&nbsp; 2</td>
+                                        </tr>
+                                        <tr>
+                                            <td><strong>Euro(EUR):</strong></td>
+                                            <td>&nbsp; 3</td>
+                                        </tr>                
+                                    </table>
+                                </md-tooltip>
+                        </span>
                         <a href="javascript:;" class="tablColmArrow float-right mt-2 mb-2 mr-3 ml-2" ng-click="createNewClaim();">
                             <span class="oi" data-glyph="plus"></span>
                         </a>
