--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ section {
     border: 1px solid #d3d7df;
     background: #fff;
     display: table;
-    width: 99%;
+    width: 100%;
     -webkit-box-shadow: 0 0 3px 1px #d3d8de;
     box-shadow: 0 0 3px 1px #d3d8de;
 }
@@ -1859,4 +1859,8 @@ a {
 .pl-20-pr-20 {
     padding-left:20px;
     padding-right:20px;
+}
+
+.suja{
+    -webkit-appearance: button-bevel;
 }
