--- a/resources/finalization/view/finalization.html
+++ b/resources/finalization/view/finalization.html
@@ -1,5 +1,5 @@
 <nav class="navbar pt-1 pb-1">
-    <span class="navbar-brand p-0 m-0" ui-sref="claim-registration">Finalization</span>
+    <span class="navbar-brand p-0 m-0" ui-sref="claim-registration" data-translate="finalization.title">Finalization</span>
 </nav>
 <section>
     <div class="leftContainer pl-20-pr-20">
