--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -1,5 +1,5 @@
 <nav class="navbar pt-1 pb-1">
-<span ui-sref="user-assignment({ param: 'reimburs' })" class="navbar-brand p-0 m-0"><i class="fa fa-arrow-left" style="cursor:pointer"></i>&nbsp;&nbsp;Reimbursement Claims : Processing</span>
+<span ui-sref="user-assignment({ param: 'reimburs' })" class="navbar-brand p-0 m-0"><i class="fa fa-arrow-left" style="cursor:pointer"></i>&nbsp;&nbsp;<span data-translate="reimbursementProcessing.title">Reimbursement Claims : Processing</span></span>
 </nav>
 <section id="reimbursment">
     <div class="leftContainer">
