--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -1,5 +1,5 @@
 <nav class="navbar pt-1 pb-1">
-    <span class="navbar-brand p-0 m-0">User Assignment</span>
+    <span class="navbar-brand p-0 m-0" data-translate="reImbUserAssignment.title">User Assignment</span>
 </nav>
 <section>
     <div class="leftContainer leftuser">
