--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -1,5 +1,5 @@
 <nav class="navbar pt-1 pb-1">
-    <span class="navbar-brand p-0 m-0" ui-sref="claim-registration">Claims Registration</span>
+    <span class="navbar-brand p-0 m-0" ui-sref="claim-registration" data-translate="reImbRegistration.title">Claims Registration</span>
 </nav>
 <section>
     <div class="leftContainer leftreg">
