--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -143,7 +143,7 @@
                                                 <input type="text" ng-model="policyDetails.policyName" ng-value="'Medic Policy'" ng-disabled="true">
                                             </md-input-container>
                                         </div>
-                                        <div class="fldsWrap clearfix" 
+                                        <div class="fldsWrap clearfix"> 
                                             <md-input-container flex-gt-sm>    
                                                 <label>Policy Start</label>
                                                 <md-datepicker  ng-keyup="clearDatepickerKeyupValue($event);" ng-model="policyDetails.policyStart" md-hide-icons="triangle" md-open-on-focus ng-disabled="true"></md-datepicker>
@@ -225,6 +225,12 @@
                                             <md-input-container flex-gt-sm>    
                                                 <label>Member Start Date</label>
                                                 <md-datepicker ng-keyup="clearDatepickerKeyupValue($event);" ng-model="memberDetails.memberStartDate" md-hide-icons="triangle" md-open-on-focus ng-disabled="true"></md-datepicker>
+                                            </md-input-container>
+                                        </div>
+                                        <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Card Received Date</label>
+                                                <md-datepicker ng-keyup="clearDatepickerKeyupValue($event);" ng-model="memberDetails.cardRecievedDate" md-hide-icons="triangle" md-open-on-focus ng-disabled="true"></md-datepicker>
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
