--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -358,7 +358,7 @@
                 </div>
                 <div ng-show="createNew">
                     <div class="claimRequestDetails">
-                        <div class="claimRequestDetInner mb-3 clearfix" style="padding-left:0px;">
+                        <div class="claimRequestDetInner mb-3 clearfix" style="padding-left:0px;border:3px solid  #b3b3b3">
                             <div layout-gt-sm="row" class="col-sm-12 pb-1">
                                 <div class="masterCodes float-left" style="border: 1px solid #b3b3b3;margin: 0 3px 0 0;width: 50% !important;">
                                     <md-autocomplete
@@ -530,7 +530,7 @@
                             </span>
                         </div>
                         <span class="fa fa-info-circle" style="color: #4e5e82;">
-                            <md-tooltip md-direction="{{demo.tipDirection}}">
+                            <md-tooltip md-direction="{{info.tipDirection}}">
                                 <table>
                                     <tr>
                                         <td><strong>United Arab Emirates(AED):</strong></td>
