--- a/resources/shared/grid/view/grid-wrapper.html
+++ b/resources/shared/grid/view/grid-wrapper.html
@@ -24,7 +24,7 @@
             </span> 
         </div>
         <span class="fa fa-info-circle" style="color: #4e5e82;">
-            <md-tooltip md-direction="{{demo.tipDirection}}">
+            <md-tooltip md-direction="{{info.tipDirection}}">
                 <table>
                     <tr>
                         <td><strong>United Arab Emirates(AED):</strong></td>
