--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -358,7 +358,7 @@
                 </div>
                 <div ng-show="createNew">
                     <div class="claimRequestDetails">
-                        <div class="claimRequestDetInner mb-3 clearfix" style="padding-left:0px;border:3px solid  #b3b3b3">
+                        <div class="claimRequestDetInner mb-3 clearfix">
                             <div layout-gt-sm="row" class="col-sm-12 pb-1">
                                 <div class="masterCodes float-left" style="border: 1px solid #b3b3b3;margin: 0 3px 0 0;width: 50% !important;">
                                     <md-autocomplete
